[project]
name = "imgenx-mcp-server"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.4",
    "volcengine-python-sdk[ark]>=4.0.22",
]

[project.urls]
repository = "https://github.com/NewToolAI/imgenx_mcp_server"

[project.scripts]
imgenx-mcp_server = "imgenx_mcp_server.server:run"
imgenx_mcp_server = "imgenx_mcp_server.server:run"
